day4/stateful-set/mysql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dbns

---
apiVersion: v1
kind: Service
metadata:
  name: db-hsvc
  namespace: dbns
spec:
  clusterIP: None
  selector:
    name: db-po
  ports:
  - port: 3306
    targetPort: 3306

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-sts
  namespace: dbns
spec:
  replicas: 1
  serviceName: db-hsvc
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: db-pvc
      spec:
        resources:
          requests:
            storage: 1Gi
        # volumeMode: Filesystem
        accessModes:
          - ReadWriteOnce
        storageClassName: do-block-storage
  selector:
    matchLabels:
      name: db-po
  template:
    metadata:
      labels:
        name: db-po
    spec:
      containers:
      - name: db-container
        image: mysql:8.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: db-pvc
            mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
