day4/stateful-set/network_policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: dbns
spec:
  podSelector:
    matchLabels:
      name: db-po
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            allow: db
      ports:
        - port: 3306
